# writon

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  LICENSE  QUICK_REFERENCE.md  README.md  SECURITY.md  api.py  main.py  pyproject.toml  render.yaml  requirements.txt  test_api.py
.github/: dependabot.yml
ai/: anthropic.py  google.py  groq.py  openai.py  provider.py
core/: writon.py
docs/: BADGE_STYLE_GUIDE.md
formatter/: case_converter.py  text_formatter.py
frontend/: api-docs.html  index.html  script.js  style.css
frontend/js/: api.js  config.js  events.js  main.js  ui.js
modes/: grammar.json  summarize.json  translate.json
prompts/: prompt_generator.py
tests/: check_env.py  test_api_pytest.py  test_core.py
