[project]
name = "writon"
version = "0.1.0"
description = "AI-powered text processor with CLI and API interfaces for grammar correction, translation, and summarization."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["AI", "text processing", "grammar", "translation", "summarization", "CLI", "API"]
authors = [
  { name = "Edward Tshepo Sibeko", email = "hello.writon@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.38.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.26.0",
]

[project.urls]
"Homepage" = "https://github.com/writon-xyz/writon"
"Bug Tracker" = "https://github.com/writon-xyz/writon/issues"
"Documentation" = "https://github.com/writon-xyz/writon#readme"

[project.scripts]
writon = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["api", "main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "formatter*", "prompts*"]

[tool.setuptools.package-data]
"*" = ["modes/*.json", "frontend/*"]